Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8246045
ZGC: Fix ZDirector::rule_high_usage() calculation
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P3
Fix Version/s:
15
Affects Version/s:
15
Component/s:
hotspot
Labels:
zgc
Subcomponent:
gc
Resolved In Build:
b26
Description
When ZDirector::rule_high_usage() calculates the amount of free space, it should take into account that "used" could be higher than "soft_max_capacity". Just like we do inZDirector::rule_allocation_rate().
Attachments
Activity
People
Assignee:
Per Liden (Inactive)
Reporter:
Per Liden (Inactive)
Votes
:
0
Vote for this issue
Watchers:
3
Start watching this issue
Dates
Created:
2020-05-28 01:06
Updated:
2024-10-10 09:13
Resolved:
2020-05-31 21:51