8246045: ZGC: Fix ZDirector::rule_high_usage() calculation

Reviewed-by: stefank, eosterlund